hugr-llvm/src/extension/collections/snapshots/hugr_llvm__extension__collections__static_array__test__static_array_const_codegen@pre-mem2reg@llvm14_2.snap
---
source: hugr-llvm/src/extension/collections/static_array.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@sa.c.d797f156.0 = constant { i64, [10 x i1] } { i64 10, [10 x i1] [i1 true, i1 false, i1 true, i1 false, i1 true, i1 false, i1 true, i1 false, i1 true, i1 false] }

define internal { i64, [0 x i1] }* @_hl.main.1() {
alloca_block:
  %"0" = alloca { i64, [0 x i1] }*, align 8
  %"5_0" = alloca { i64, [0 x i1] }*, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store { i64, [0 x i1] }* bitcast ({ i64, [10 x i1] }* @sa.c.d797f156.0 to { i64, [0 x i1] }*), { i64, [0 x i1] }** %"5_0", align 8
  %"5_01" = load { i64, [0 x i1] }*, { i64, [0 x i1] }** %"5_0", align 8
  store { i64, [0 x i1] }* %"5_01", { i64, [0 x i1] }** %"0", align 8
  %"02" = load { i64, [0 x i1] }*, { i64, [0 x i1] }** %"0", align 8
  ret { i64, [0 x i1] }* %"02"
}
